Mark light header

--- a/style-guide/index.html
+++ b/style-guide/index.html
@@ -396,7 +396,7 @@
         </div>
       </div>
     </header>
-    <header class="sg-header">
+    <header class="sg-header sg-header--light">
       <div class="sg-header__container sg-header__container--light">
         <div class="sg-header__content">
           <div class="sg-header__left">
